force-app/main/default/objects/LLC_BI__Collateral__c/LLC_BI__Collateral__c.object-meta.xml
<CustomObject>
    <description>Something pledged as security for repayment of a loan, to be forfeited in the event of a default.</description>
    <label>Collateral Mgmt</label>
    <nameField>
        <displayFormat>COL-{000000}</displayFormat>
        <label>Collateral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>