force-app/main/default/objects/LLC_BI__Collateral__c/fields/cm_In_Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>cm_In_Flood_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to illustrate when a piece of collateral is in a flood zone</description>
    <label>In Flood Zone</label>
    <type>Checkbox</type>
</CustomField>