force-app/main/default/objects/LLC_BI__Collateral__c/fields/JHJX__CollatItemDetDesc1__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatItemDetDesc1__c</fullName>
    <label>Description of the collateral item 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>