force-app/main/default/objects/LLC_BI__Collateral__c/fields/JHJX__CollatItemDetDesc4__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatItemDetDesc4__c</fullName>
    <label>Description of the collateral item 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>