force-app/main/default/objects/LLC_BI__Collateral__c/fields/JHJX__CollatItemDetDescText3__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatItemDetDescText3__c</fullName>
    <label>Desc. text of the collateral item 3</label>
    <length>55</length>
    <type>Text</type>
</CustomField>