force-app/main/default/objects/LLC_BI__Collateral__c/fields/JHJX__CollatItemDetDescText4__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CollatItemDetDescText4__c</fullName>
    <label>Desc. text of the collateral item 4</label>
    <length>55</length>
    <type>Text</type>
</CustomField>