force-app/main/default/objects/LLC_BI__Collateral__c/fields/LetterofCreditMaturityDate__c.field-meta.xml
<CustomField>
    <fullName>LetterofCreditMaturityDate__c</fullName>
    <label>Letter of Credit Maturity Date</label>
    <type>Date</type>
</CustomField>