force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advance_Rate__c</fullName>
    <description>This field is optional and auto-populates based on the Collateral type. It is the percentage of the value of Collateral that a lender uses to determine the amount of a loan.</description>
    <formula>LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the value of collateral that a lender uses to determine the amount of a loan. This is a calculated field from the Collateral Type.</inlineHelpText>
    <label>Advance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>