force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Airframe_Engine_Log_Books_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Airframe_Engine_Log_Books_Description__c</fullName>
    <description>This field is optional and manually populated. It is a text area to detail information about the airframe and engine log books that are needed when securing a loan with titled aircraft collateral.</description>
    <label>Airframe/Engine Log Books Description</label>
    <type>TextArea</type>
</CustomField>