force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Airport_Home_Base__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Airport_Home_Base__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify which airport is the home base location for the titled aircraft collateral.</description>
    <label>Airport / Home Base</label>
    <length>255</length>
    <type>Text</type>
</CustomField>