force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Usage__c</fullName>
    <description>Users populate this optional field with the assets estimated annual mileage or hours of operation.</description>
    <label>Annual Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>