force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__APN__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__APN__c</fullName>
    <description>Users populate this optional text field with the property parcel number (APN).</description>
    <inlineHelpText>Optional: Enter the property parcel number (APN).</inlineHelpText>
    <label>APN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>