force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Appraisal_Date__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the date of most recent collateral value assessment.</description>
    <inlineHelpText>Date of the last time the collateral value was assessed</inlineHelpText>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>