force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Authority_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Authority_Number__c</fullName>
    <description>This optional field specifies the number of owners that have the authority to pledge this asset as collateral. It is manually populated.</description>
    <inlineHelpText>The number of owners of this asset that have the authority to pledge the asset as collateral.</inlineHelpText>
    <label>Authority Number</label>
    <summaryFilterItems>
        <field>LLC_BI__Account_Collateral__c.LLC_BI__Pledging_Authority__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LLC_BI__Account_Collateral__c.LLC_BI__Collateral__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>