force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Capacity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Capacity__c</fullName>
    <description>Users populate this optional field with the asset size or capacity (e.g. weight capacity, gross rail load, tonnage, etc.).</description>
    <label>Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>