force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Certificated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Certificated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and manually populated. It is a checkbox used to indicate if the bank has possession of the collateral. Checked = True, Unchecked = False.</description>
    <label>Certificated</label>
    <type>Checkbox</type>
</CustomField>