force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Affixed_to_a_Permanent_Site__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Affixed_to_a_Permanent_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is affixed to a permanent site (for example, a mobile home). Checked = True, Unchecked = False.</description>
    <label>Collateral Affixed to a Permanent Site</label>
    <type>Checkbox</type>
</CustomField>