force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Insurance_Agent__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the insurance agent with which the collateral is insured.</description>
    <label>Collateral Insurance Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>