force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Insurance_City__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Insurance_City__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the city of the insurance company where the collateral is insured.</description>
    <label>Collateral Insurance City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>