force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Insurance_Policy_Number__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the insurance policy number for the collateral.</description>
    <label>Collateral Insurance Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>