force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Insurance_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Insurance_Zipcode__c</fullName>
    <description>This field is optional and manually populated. Specify the ZIP code for the address of the insurance company where the collateral is insured.</description>
    <label>Collateral Insurance Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>