force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Issuer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Issuer__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the issuer of the Collateral. This field is used to map to Laser Pro and is only valid when working with a Securities collateral subtype.</description>
    <label>Collateral Issuer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>