force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Legal_Description__c</fullName>
    <description>The user populates this optional text field with the legal description of the collateral. By default, it is blank.</description>
    <inlineHelpText>Enter the legal description for the collateral.</inlineHelpText>
    <label>Collateral Legal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>