force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Location__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Location__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the latitude and longitude of the collateral location. The field currently supports entry of up to 6 decimals.</description>
    <label>Collateral Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>