force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Collateral_Rollup_Count__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Rollup_Count__c</fullName>
    <description>Number field that represents the total count for all direct children of a collateral record. Used in Complex Collateral scenarios.</description>
    <label>Collateral Rollup Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>