force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Combined_Percent_Pledged__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Combined_Percent_Pledged__c</fullName>
    <description>This field is optional and automatically populated.  It is the total of all the Collateral Pledged records displayed as a percentage.</description>
    <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Total_Pledge_Amount__c / LLC_BI__Value__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of this collateral that has been pledged.</inlineHelpText>
    <label>Combined Percent Pledged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>