force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contract_Date__c</fullName>
    <description>This field is optional and manually populated. If a government contract is being used as collateral, use this field to specify the date the contract was entered into.</description>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>