force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contract_Number__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the contract number of a government contract collateral.</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>