force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__County__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the county where the collateral is located.</description>
    <inlineHelpText>Collateral County</inlineHelpText>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>