force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Deposit_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Account_Number__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the account number for a deposit account being used as collateral.</description>
    <label>Deposit Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>