force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Depreciation_Term__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Depreciation_Term__c</fullName>
    <description>Users populate this optional field with the depreciation term (in years) of the asset.</description>
    <label>Depreciation Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>