force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__EBO_Yield__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EBO_Yield__c</fullName>
    <description>Users populate this optional percent field with the lessor&apos;s yield for an Early Buyout Option (EBO).</description>
    <label>Early Buyout Option Yield</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>