force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Flood_Insurance_Required_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Flood_Insurance_Required_Amount__c</fullName>
    <description>The user manually populates this field with the flood insurance amount required. The minimum federal requirement for this amount is the lesser of either the outstanding principal loan balance or the value of the improved property, mobile home, or personal property used to secure the loan.</description>
    <inlineHelpText>Enter the required flood insurance amount.</inlineHelpText>
    <label>Flood Insurance Required Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>