force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Full_Address__c</fullName>
    <description>This field is optional and a concatenated field for full collateral address. It contains the unencrypted address for backwards compatibility. The field cannot be encrypted because it is a formula.</description>
    <formula>LLC_BI__Full_Address_NE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>