force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Full_Address_PE__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Full_Address_PE__c</fullName>
    <description>This field is optional and a concatenated field for full collateral address. The field should be encrypted using Platform Encryption. The field will only be populated when Platform Encryption is enabled for the nCino Platform.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>