force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Gross_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Gross_Tonnage__c</fullName>
    <description>This field is optional and manually populated. Use this field to specify the maximum amount of weight related to a ship&apos;s overall internal volume. When mapped to LaserPro, this field is unique to a Vessel subtype.</description>
    <label>Gross Tonnage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>