force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Has_Authority__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Has_Authority__c</fullName>
    <description>This field is optional. It auto-populates if there is an account that has authority to pledge this collateral.</description>
    <formula>LLC_BI__Authority_Number__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is there an account that has authority to pledge this collateral?</inlineHelpText>
    <label>Has Authority</label>
    <type>Checkbox</type>
</CustomField>