force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Hull_and_Engine_Log_Books_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hull_and_Engine_Log_Books_Description__c</fullName>
    <description>This field is optional and manually populated. Use this text field to provide information about the hull and engine log books that are needed when securing a loan with boat/ vessel collateral.</description>
    <label>Hull and Engine Log Books Description</label>
    <type>TextArea</type>
</CustomField>