force-app/main/default/objects/LLC_BI__Collateral__c/fields/LLC_BI__Insurance_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Insurance_Expiration_Date__c</fullName>
    <description>This field is optional and manually populated. It is the date that the insurance policy expires.</description>
    <label>Insurance Expiration Date</label>
    <type>Date</type>
</CustomField>